v17.1/modules/GC.Spread.Sheets.Shapes.md
# Namespace: Shapes

[Spread](GC.Spread.md).[Sheets](GC.Spread.Sheets.md).Shapes

## Table of contents

### Enumerations

- [ArrowheadLength](../enums/GC.Spread.Sheets.Shapes.ArrowheadLength.md)
- [ArrowheadStyle](../enums/GC.Spread.Sheets.Shapes.ArrowheadStyle.md)
- [ArrowheadWidth](../enums/GC.Spread.Sheets.Shapes.ArrowheadWidth.md)
- [AutoShapeType](../enums/GC.Spread.Sheets.Shapes.AutoShapeType.md)
- [CompoundType](../enums/GC.Spread.Sheets.Shapes.CompoundType.md)
- [ConnectorType](../enums/GC.Spread.Sheets.Shapes.ConnectorType.md)
- [FormControlType](../enums/GC.Spread.Sheets.Shapes.FormControlType.md)
- [GradientFillType](../enums/GC.Spread.Sheets.Shapes.GradientFillType.md)
- [HorizontalAlign](../enums/GC.Spread.Sheets.Shapes.HorizontalAlign.md)
- [LineCapStyle](../enums/GC.Spread.Sheets.Shapes.LineCapStyle.md)
- [LineJoinStyle](../enums/GC.Spread.Sheets.Shapes.LineJoinStyle.md)
- [LinearGradientFillDirection](../enums/GC.Spread.Sheets.Shapes.LinearGradientFillDirection.md)
- [ListBoxSelectionType](../enums/GC.Spread.Sheets.Shapes.ListBoxSelectionType.md)
- [PresetLineDashStyle](../enums/GC.Spread.Sheets.Shapes.PresetLineDashStyle.md)
- [RadialGradientFillDirection](../enums/GC.Spread.Sheets.Shapes.RadialGradientFillDirection.md)
- [ResizeMode](../enums/GC.Spread.Sheets.Shapes.ResizeMode.md)
- [ShapeFillType](../enums/GC.Spread.Sheets.Shapes.ShapeFillType.md)
- [SnapMode](../enums/GC.Spread.Sheets.Shapes.SnapMode.md)
- [TextureFillAlignment](../enums/GC.Spread.Sheets.Shapes.TextureFillAlignment.md)
- [TextureFillMirrorType](../enums/GC.Spread.Sheets.Shapes.TextureFillMirrorType.md)
- [VerticalAlign](../enums/GC.Spread.Sheets.Shapes.VerticalAlign.md)

### Classes

- [CameraShape](../classes/GC.Spread.Sheets.Shapes.CameraShape.md)
- [ConnectorShape](../classes/GC.Spread.Sheets.Shapes.ConnectorShape.md)
- [FormControlShape](../classes/GC.Spread.Sheets.Shapes.FormControlShape.md)
- [GroupShape](../classes/GC.Spread.Sheets.Shapes.GroupShape.md)
- [PictureShape](../classes/GC.Spread.Sheets.Shapes.PictureShape.md)
- [Shape](../classes/GC.Spread.Sheets.Shapes.Shape.md)
- [ShapeBase](../classes/GC.Spread.Sheets.Shapes.ShapeBase.md)
- [ShapeCollection](../classes/GC.Spread.Sheets.Shapes.ShapeCollection.md)
- [ShapeStyle](../classes/GC.Spread.Sheets.Shapes.ShapeStyle.md)

### Interfaces

- [IBoundingRect](../interfaces/GC.Spread.Sheets.Shapes.IBoundingRect.md)
- [ICheckBoxFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.ICheckBoxFormControlOptions.md)
- [IComboBoxFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.IComboBoxFormControlOptions.md)
- [IControlInfo](../interfaces/GC.Spread.Sheets.Shapes.IControlInfo.md)
- [IGradientColorStopOption](../interfaces/GC.Spread.Sheets.Shapes.IGradientColorStopOption.md)
- [IGradientFillOption](../interfaces/GC.Spread.Sheets.Shapes.IGradientFillOption.md)
- [IGroupBoxFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.IGroupBoxFormControlOptions.md)
- [IListBoxFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.IListBoxFormControlOptions.md)
- [IOptionButtonFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.IOptionButtonFormControlOptions.md)
- [IPictureFillOption](../interfaces/GC.Spread.Sheets.Shapes.IPictureFillOption.md)
- [IPictureFormat](../interfaces/GC.Spread.Sheets.Shapes.IPictureFormat.md)
- [IPointInfo](../interfaces/GC.Spread.Sheets.Shapes.IPointInfo.md)
- [IScrollBarFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.IScrollBarFormControlOptions.md)
- [IShapeBorder](../interfaces/GC.Spread.Sheets.Shapes.IShapeBorder.md)
- [IShapeConnector](../interfaces/GC.Spread.Sheets.Shapes.IShapeConnector.md)
- [IShapeFill](../interfaces/GC.Spread.Sheets.Shapes.IShapeFill.md)
- [IShapeFillOption](../interfaces/GC.Spread.Sheets.Shapes.IShapeFillOption.md)
- [IShapeGradientFill](../interfaces/GC.Spread.Sheets.Shapes.IShapeGradientFill.md)
- [IShapeGradientFillColorStop](../interfaces/GC.Spread.Sheets.Shapes.IShapeGradientFillColorStop.md)
- [IShapeLine](../interfaces/GC.Spread.Sheets.Shapes.IShapeLine.md)
- [IShapeLineArrowConfig](../interfaces/GC.Spread.Sheets.Shapes.IShapeLineArrowConfig.md)
- [IShapeLineArrowOption](../interfaces/GC.Spread.Sheets.Shapes.IShapeLineArrowOption.md)
- [IShapeModel](../interfaces/GC.Spread.Sheets.Shapes.IShapeModel.md)
- [IShapeOptions](../interfaces/GC.Spread.Sheets.Shapes.IShapeOptions.md)
- [IShapePictureFill](../interfaces/GC.Spread.Sheets.Shapes.IShapePictureFill.md)
- [IShapeStrokeOption](../interfaces/GC.Spread.Sheets.Shapes.IShapeStrokeOption.md)
- [IShapeTextEffect](../interfaces/GC.Spread.Sheets.Shapes.IShapeTextEffect.md)
- [IShapeTextFormatOption](../interfaces/GC.Spread.Sheets.Shapes.IShapeTextFormatOption.md)
- [IShapeTextFrame](../interfaces/GC.Spread.Sheets.Shapes.IShapeTextFrame.md)
- [IShapeTextureFill](../interfaces/GC.Spread.Sheets.Shapes.IShapeTextureFill.md)
- [ISpinButtonFormControlOptions](../interfaces/GC.Spread.Sheets.Shapes.ISpinButtonFormControlOptions.md)
- [ITextureFillOption](../interfaces/GC.Spread.Sheets.Shapes.ITextureFillOption.md)

### Type aliases

- [IFormControlShapeOptions](GC.Spread.Sheets.Shapes.md#iformcontrolshapeoptions)
- [IFormControlShapeValue](GC.Spread.Sheets.Shapes.md#iformcontrolshapevalue)

## Type aliases

### <a id="iformcontrolshapeoptions" name="iformcontrolshapeoptions"></a> IFormControlShapeOptions

Ƭ **IFormControlShapeOptions**: [`IOptionButtonFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.IOptionButtonFormControlOptions.md) \| [`ICheckBoxFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.ICheckBoxFormControlOptions.md) \| [`ISpinButtonFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.ISpinButtonFormControlOptions.md) \| [`IScrollBarFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.IScrollBarFormControlOptions.md) \| [`IListBoxFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.IListBoxFormControlOptions.md) \| [`IComboBoxFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.IComboBoxFormControlOptions.md) \| [`IGroupBoxFormControlOptions`](../interfaces/GC.Spread.Sheets.Shapes.IGroupBoxFormControlOptions.md) \| {}

**`description`** The form control shape options type.

___

### <a id="iformcontrolshapevalue" name="iformcontrolshapevalue"></a> IFormControlShapeValue

Ƭ **IFormControlShapeValue**: `number` \| `string` \| `boolean` \| `undefined`

**`description`** The form control shape value type.
